--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-openid-connect": "^2.17.0"
+    "express-openid-connect": "^2.17.0",
+    "openai": "^4.12.4",
+    "readline-sync": "^1.4.10"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
