--- a/backend/package.json
+++ b/backend/package.json
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/markvagil/BuddyTutor#readme",
   "dependencies": {
+    "axios": "^1.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-openid-connect": "^2.17.0",
     "openai": "^4.12.4",
+    "openai-api": "^1.3.1",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
