--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-openid-connect": "^2.17.0",
+    "mongoose": "^7.6.3",
     "openai": "^4.12.4",
     "openai-api": "^1.3.1",
     "readline-sync": "^1.4.10"
