--- a/buddy-tutor/tsconfig.json
+++ b/buddy-tutor/tsconfig.json
@@ -26,8 +26,10 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
     ".next/types/**/*.ts",
-    "pages/_app.js"
+    "app/chat/page.tsx"
   ],
   "exclude": ["node_modules"]
 }
